[package]
name = "honeybee"
version = "0.1.0"
authors = ["Alex van de Griendt <avdg.lucerna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }